Script/Kube/isignalrservice-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: isignalrservice
  name: isignalrservice
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: isignalrservice
    spec:
      containers:
      - env:
        - name: CONSUL_ENABLED
          value: "false"
        - name: VAULT_ENABLED
          value: "false"
        image: isignalrservice
        imagePullPolicy: Never
        name: isignalrservice
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
