Script/Kube/isignalrservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: isignalrservice
  name: isignalrservice
spec:
  ports:
  - name: "5002"
    port: 5002
    targetPort: 80
  selector:
    io.kompose.service: isignalrservice
status:
  loadBalancer: {}
