Script/Kube/orderservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\Software\kompose.exe convert
    kompose.version: 1.17.0 (a74acad)
    traefik.frontend.rule: 'AddPrefix: /order'
  creationTimestamp: null
  labels:
    io.kompose.service: orderservice
  name: orderservice
spec:
  ports:
  - name: "5001"
    port: 5001
    targetPort: 80
  selector:
    io.kompose.service: orderservice
status:
  loadBalancer: {}
